--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,8 @@ test:
 #
 production:
   <<: *default
-  database: dojo004_blog_2_0_production
-  username: dojo004_blog_2_0
-  password: <%= ENV["DOJO004_BLOG_2_0_DATABASE_PASSWORD"] %>
+  port: <%= ENV["POSTGRES_PORT"] %>
+  host: <%= ENV["POSTGRES_HOST"] %>
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
