--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,6 @@ production:
   <<: *default
   port: <%= ENV["POSTGRES_PORT"] %>
   host: <%= ENV["POSTGRES_HOST"] %>
-  database: <%= ENV["POSTGRES_DB"] %>
-  username: <%= ENV["POSTGRES_USER"] %>
+  database: <%= ENV["POSTGRES_DATABASE"] %>
+  username: <%= ENV["POSTGRES_USERNAME"] %>
   password: <%= ENV["POSTGRES_PASSWORD"] %>
